# Ir_agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CHEATSHEET.md  DIPLOMA_DOCUMENTATION.md  Dockerfile  INVESTIGATION_GUIDE.md  LICENSE  ML_ARCHITECTURE.md  ML_TO_LLM_ROADMAP.md  README.md  SUMMARY.md  TRAINING_PLAYBOOK.md  alembic.ini  chat_demo.py  cli.py  cyber_incident_investigator.py  demo_full.py  docker-compose.yml  ml_training_real_data.ipynb  pyproject.toml  requirements-db.txt  requirements-dev.txt  requirements.txt  run_tests.py  simulate_attacks.py  soc_chat.py  start_all_collectors.py  test_attacks.py  test_events.json  test_investigation.py  tui.py
.claude/: settings.local.json
alembic/: env.py
app/: README  dashboard.html  main.py  report_ui.html
datasets/: active_directory_events.json  firewall_events.json  kaspersky_events.json  linux_auditd_events.json  linux_auth_events.json  real_benign_labels.json  sysmon_events.json  windows_security_events.json
docs/: EVALUATION.md  api.md  architecture.md  deployment.md
models/: drift_baseline.json  gradient_boosting_decoupled.pkl  gradient_boosting_enterprise.pkl  gradient_boosting_honest.pkl  gradient_boosting_model.pkl  gradient_boosting_production.pkl  gradient_boosting_v5_hgb.pkl  neural_classifier.pt  neural_classifier_best.pt  random_forest_model.pkl  training_history.json
reports/: agent_evaluation.json  baseline_comparison.json  drift_report.json  ml_validation_report.json  pipeline_quality_report.md  strict_audit_report.json
scripts/: build_mitre_patterns.py  compare_baselines.py  (+17 more)
(+102 files in other folders)
